# aera-xray-assist

./: .gitignore  README.ko.md  README.md  index.html  index.html.artifact.json
Ko/: README_DOCS.md  api-schema_ko.md  (+8 more)
smart-xray-assist/: PROGRESS.md  README.md  pyproject.toml  requirements.txt
smart-xray-assist/configs/: calib_room_a.json  camera.yaml  device.yaml  exposure_lut.yaml  gating.yaml
smart-xray-assist/migrations/: 001_init.sql
smart-xray-assist/schemas/: audit_event.schema.json  camera_frame_meta.schema.json  depth_summary.schema.json  error_event.schema.json  exposure_recommendation.schema.json  operator_action.schema.json  respiration_state.schema.json
smart-xray-assist/scripts/: calibrate_empty_bed.py  run_mvp.py
smart-xray-assist/src/xray_assist/: __init__.py  app.py
smart-xray-assist/src/xray_assist/api/: gateway.py
smart-xray-assist/src/xray_assist/audit/: logger.py
smart-xray-assist/src/xray_assist/camera/: discovery.py  interface.py  mock_camera.py  orbbec_adapter.py  realsense_adapter.py  service.py
smart-xray-assist/src/xray_assist/common/: clock.py  config.py  errors.py  event_bus.py  messages.py  validation.py
smart-xray-assist/src/xray_assist/depth/: calibration.py  processor.py
smart-xray-assist/tests/: conftest.py
smart-xray-assist/tests/integration/: test_audit_action.py  test_camera_core.py  test_core_ui.py  test_safe_state.py
smart-xray-assist/tests/unit/: test_audit.py  test_confidence.py  test_config.py  test_gating.py  test_lut.py  test_schema.py
smart-xray-assist/ui/operator-console/: index.html
(+28 files in other folders)
