[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xray-assist"
version = "0.1.0"
description = "Smart X-ray Assist — Phase 1 Operator Assist MVP"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
realsense = ["pyrealsense2>=2.54"]
orbbec = ["pyorbbecsdk>=1.10"]
dev = ["pytest>=7.4", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
